Issue on mobile safari. Images changed to JPG for compatibility.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/static/images/Background-Bakery-Wallpaper.webp");
+  background-image: url("/static/images/Background-Bakery-Wallpaper.jpg");
   background-size:contain;
   display: flex;
   min-height: 100vh;
